--- a/.github/workflows/create-client-from-issue.yml
+++ b/.github/workflows/create-client-from-issue.yml
@@ -44,6 +44,21 @@ jobs:
 
           if [ "$http" -ge 200 ] && [ "$http" -lt 300 ]; then
             echo "Repository created"
+            
+            # Enable GitHub Pages
+            pages_url="https://api.github.com/repos/$owner/$repo/pages"
+            pages_payload='{"source":{"branch":"main","path":"/"}}'
+            
+            sleep 10  # Wait for repository to be fully created
+            
+            pages_resp=$(curl -s -w "\n%{http_code}" -X POST -H "Authorization: token $TEMPLATE_PAT" -H "Accept: application/vnd.github.v3+json" -d "$pages_payload" "$pages_url")
+            pages_http=$(echo "$pages_resp" | tail -n1)
+            
+            if [ "$pages_http" -ge 200 ] && [ "$pages_http" -lt 300 ]; then
+              echo "GitHub Pages enabled"
+            else
+              echo "Warning: Failed to enable GitHub Pages (HTTP $pages_http)"
+            fi
           else
             echo "Failed to create repository (HTTP $http)" >&2
             exit 1
